--- a/www/index.html
+++ b/www/index.html
@@ -38,5 +38,6 @@
         <script type="text/javascript">
             app.initialize();
         </script>
+		<script src="phonegap.js"></script>
     </body>
 </html>
